# stiv

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.claude/docs/: 2025-12-27-performance-optimization.md  20251226-image-display-bug.md
docs/: architecture.md
src/: app.rs  config.rs  fit.rs  kgp.rs  main.rs  sender.rs  worker.rs
